Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

26-Jun-2011 Christophe Demko
 # [#26223] JMail::setSender do not set Sender (Alessandro Pasotti)
 # [#26155] Search results for contacts (Nikolai Plath)

25-Jun-2011 Christophe Demko
 # [#23893] My Profile issues
 # [#26252] Cache library does not generate valid index.html file
 # [#26238] Improvement of assigning modules (Dennis Hermatski)
 # [#26043] Install second joomla with special prefix destruct first joomla tables at the same database
 # [#26254] Contact List Queries Trashed Items (Nikolai Plath)

24-Jun-2011 Christophe Demko
 - Revert commit 21640 (http://joomlacode.org/gf/project/joomla/tracker/?action=TrackerItemEdit&tracker_item_id=25041)

23-Jun-2011 Jean-Marie Simonet
 $ Correcting extraneous spaces in some ini files
 
23-Jun-2011 Christophe Demko
 # [#24662] Newly published articles showing pending when they are actually published (revived) (Elin Waring)
 # [#22158] Templates are still available for assignment after being unpublished
 # [#26040] Redirect of article enabled with 'register to read more' function results in 404 Category not found (Joel Walker)
 # [#23793] Core update potentially allows for installing an older update
 # [#26221] Disabling admin module Title breaks layout
 # [#26200] Add toolbar helper task for checkin (Michael Babker)
 # [#26199] Use defined toolbar tasks in place of custom (Michael Babker)
 # [#26234] Add missing toolbar icon and update two old ones (Andrea Tarr)
 # [#26208] More administrator layout syncs (Andrea Tarr, Rouven Weßling)

22-Jun-2011 Christophe Demko
 # [#24604] JDate class sets php timezone to UTC which forces all Joomla addons to use UTC dates
 # [#25239] Cant set template style (bill richardson)
 + [#26171] Automatic DB update
 + [#25041] Module Menu Assignment Enhancements (David Havard)